--- a/sign-stage.properties
+++ b/sign-stage.properties
@@ -4,3 +4,4 @@
 #spring.datasource.username=postgres
 #spring.datasource.password=postgrespw
 server.port=8082
+sign.msg =You are connecting to Sign Service with the stage environment
