--- a/upload.properties
+++ b/upload.properties
@@ -1,6 +1,6 @@
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.platform=postgres
-#spring.datasource.url=jdbc:postgresql://localhost:49153/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=postgrespw
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql:/34.170.95.184:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=5126348H
 upload.msg =You are connecting to Upload Service with the production environmentttttt
