--- a/upload.properties
+++ b/upload.properties
@@ -3,4 +3,5 @@
 #spring.datasource.url=jdbc:postgresql:/34.170.95.184:5432/postgresdb
 #spring.datasource.username=admin
 #spring.datasource.password=5126348H
+server.port=8081
 upload.msg =You are connecting to Upload Service with the production environmentttttt
